--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sonic-pi-tool"
 version = "0.1.0"
 authors = ["Louis Pilfold <louis@lpil.uk>"]
+edition = "2018"
 
 [lib]
 name = "lib"
@@ -12,9 +13,9 @@ name = "sonic-pi-tool"
 path = "src/main.rs"
 
 [dependencies]
-rosc = "~0.1"
-clap = "~2.33.3"
-nix = "0.7.0"
-ansi_term = "0.9"
-dirs = "2.0"
-escaper = "0.1.0"
+rosc = "~0.7"
+clap = { version = "~3.1", features = ["cargo"] }
+nix = "~0.24"
+ansi_term = "~0.12"
+dirs = "~4.0"
+escaper = "~0.1"
